--- a/angryships-android/pom.xml
+++ b/angryships-android/pom.xml
@@ -207,6 +207,17 @@
 			<artifactId>jmock-junit4</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.ads.admob</groupId>
+			<artifactId>admob</artifactId>
+			<version>${admob.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.adwhirl.adwhirl</groupId>
+			<artifactId>adwhirl</artifactId>
+			<version>${adwhirl.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
